feat(os): Windows ConPTY experimental adapter + documentation (#60, #106)
Implement WindowsTTY using pywinpty ConPTY backend, gated behind
--experimental flag. Includes CRLF normalisation, Windows 10 1809+
build validation, troubleshooting docs, and non-blocking CI matrix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,6 +157,10 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
             experimental: true
+          # Windows ConPTY experimental (non-blocking)
+          - os: windows-latest
+            python-version: "3.12"
+            experimental: true
 
     steps:
       - uses: actions/checkout@v6
