--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: MacOS",
+    "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
@@ -59,6 +60,9 @@ slack = [
 ]
 keyring = [
     "keyring>=25",
+]
+windows = [
+    "pywinpty>=2.0",
 ]
 dashboard = [
     "fastapi>=0.104",
@@ -165,7 +169,7 @@ disallow_any_generics = false
 no_implicit_optional = true
 
 [[tool.mypy.overrides]]
-module = ["ptyprocess.*", "detect_secrets.*", "textual.*", "slack_sdk.*", "fastapi.*", "uvicorn.*", "starlette.*"]
+module = ["ptyprocess.*", "winpty.*", "detect_secrets.*", "textual.*", "slack_sdk.*", "fastapi.*", "uvicorn.*", "starlette.*"]
 ignore_missing_imports = true
 
 # CLI commands — Click-decorated, intentionally untyped (ruff ANN ignored)
