--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "atlasbridge"
-version = "0.10.1"
+version = "1.0.0"
 description = "Policy-driven autonomous runtime for AI CLI agents — deterministic rule evaluation, built-in human escalation"
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [{ name = "AtlasBridge Contributors" }]
 keywords = ["ai", "cli", "policy", "autonomous", "agent", "claude", "pty", "telegram", "escalation"]
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
