--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,8 +177,9 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run tests with coverage
+        timeout-minutes: 10
         run: |
-          pytest --cov=atlasbridge --cov-report=xml --cov-report=term-missing -v ${{ matrix.os == 'windows-latest' && '--timeout=10' || '' }}
+          pytest --cov=atlasbridge --cov-report=xml --cov-report=term-missing -v
 
       - name: Verify tiered coverage
         if: matrix.python-version == '3.11' && matrix.os == 'ubuntu-latest'
