feat(dashboard): replace Python FastAPI dashboard with Node.js/React full-stack dashboard
New enterprise-grade dashboard built with React 18 + Express 5 + TypeScript:
- Full-stack app: React SPA (Vite + TailwindCSS + shadcn/ui) + Express API
- Dual-database architecture: dashboard.db (read-write, Drizzle ORM) for RBAC/settings,
  atlasbridge.db (read-only, better-sqlite3) for live session/prompt/audit data
- AtlasBridgeRepo class reads real operational data from AtlasBridge's SQLite + JSONL trace
- Sanitization layer: ANSI stripping, token redaction (Telegram, Slack, GitHub, AWS)
- Evidence engine + compliance scanning with real data
- Loopback-only binding (127.0.0.1) for safety
- CLI: `atlasbridge dashboard start` spawns Node.js (port 5000), --legacy for old Python dashboard
- Production build: esbuild server bundle + Vite client build

Migrated from PostgreSQL to SQLite: pgTable→sqliteTable, serial→integer autoIncrement,
boolean→integer mode, timestamp→text, jsonb→text JSON mode, array→JSON text columns.

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,11 @@ build/
 
 # Node (if any tooling)
 node_modules/
+
+# Dashboard (Node.js)
+dashboard/dist/
+dashboard/node_modules/
+dashboard/.env
+dashboard/*.db
+dashboard/*.db-shm
+dashboard/*.db-wal
