feat(dashboard): bundle pre-built dashboard for pip install support
The Node.js dashboard dist is now included in the Python package under
_dashboard_dist/. On first run from a pip install, the runtime is
automatically set up in the config directory with better-sqlite3.

Also fixes index.js → index.cjs entry point detection.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,7 +103,13 @@ Security = "https://github.com/abdulraoufatia/atlasbridge/blob/main/SECURITY.md"
 where = ["src"]
 
 [tool.setuptools.package-data]
-atlasbridge = ["**/*.tcss", "dashboard/templates/*.html", "dashboard/static/*.css", "dashboard/static/*.js"]
+atlasbridge = [
+    "**/*.tcss",
+    "dashboard/templates/*.html",
+    "dashboard/static/*.css",
+    "dashboard/static/*.js",
+    "_dashboard_dist/**/*",
+]
 
 [tool.ruff]
 target-version = "py311"
