feat: add direct LLM chat mode with policy-governed tool use
Adds a new `atlasbridge chat` command that lets users talk to LLMs
directly via Telegram/Slack, with the policy engine governing tool use.

Provider foundation:
- BaseProvider ABC + ProviderRegistry with httpx-only implementations
- Anthropic (Claude), OpenAI (GPT-4o), Google (Gemini) providers
- Streaming support with edit-in-place Telegram UX

Chat engine:
- ChatEngine orchestrates conversation loop with tool call handling
- Tool calls evaluated as synthetic prompt events through existing
  policy evaluator (prompt_type: tool_use)
- 5 built-in tools: read_file, list_directory, search_files,
  write_file, run_command with risk levels (safe/moderate/dangerous)

Config & CLI:
- ProviderConfig + ChatConfig added to AtlasBridgeConfig
- Env var overrides: ATLASBRIDGE_LLM_PROVIDER/API_KEY/MODEL
- LLM provider selection step added to setup wizard
- DaemonManager extended with _run_chat_session()

Policy integration:
- TOOL_USE added to PromptTypeFilter enum
- tool_name field added to MatchCriteria for targeted tool governance
- _match_tool_name() evaluator helper with regex support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,9 @@ jobs:
       - name: atlasbridge console --help
         run: atlasbridge console --help
 
+      - name: atlasbridge chat --help
+        run: atlasbridge chat --help
+
   lint:
     name: Lint & Type Check
     runs-on: ubuntu-latest
